@@ -2,103 +2,136 @@ package com.sakurakugu.autotorch.client;
 
 import com.mojang.blaze3d.vertex.PoseStack;
 import com.mojang.blaze3d.vertex.VertexConsumer;
+import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
-import java.util.function.Predicate;
+import java.util.Map;
+import com.sakurakugu.autotorch.client.AutoTorchRenderTypes;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.renderer.MultiBufferSource;
 import net.minecraft.client.renderer.RenderType;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.phys.Vec3;
 
-/** 在可生成怪物的地面上，将缓存的光照等级绘制为经过深度测试的交叉标记或七段数字。 */
+/** 在可生成怪物的地面上，将缓存的光照等级绘制为经过深度测试的交叉标记或纹理数字。 */
 public final class LightOverlayRenderer {
+    private static final ResourceLocation NUMBER_TEXTURE =
+            new ResourceLocation("autotorch", "textures/misc/light_level_numbers_large.png");
+    private static final ResourceLocation MEDIUM_NUMBER_TEXTURE =
+            new ResourceLocation("autotorch", "textures/misc/light_level_numbers_medium.png");
+    private static final int FULL_BRIGHT_LIGHT = 0xF0;
     private static final int ALWAYS_RISK_COLOR = 0xE0FF3030;
     private static final int NIGHT_RISK_COLOR = 0xE0FFD23C;
     private static final int SAFE_COLOR = 0xE050E060;
+    private static final int SWAMP_SLIME_RISK_COLOR = 0xE0E050E0;
     private static final int DROWNED_RISK_COLOR = 0xE040D8E8;
-    private static final float CROSS_LINE_WIDTH = 2.5F;
-    private static final float DIGIT_LINE_WIDTH = 4.0F;
     private static final double SURFACE_OFFSET = 0.0125D;
     private static final double CROSS_MARGIN = 0.14D;
-    private static final double DIGIT_WIDTH = 0.24D;
-    private static final double DIGIT_HEIGHT = 0.58D;
-    private static final double DIGIT_GAP = 0.08D;
-    private static final int[] DIGIT_SEGMENTS = {
-            0b0111111, 0b0000110, 0b1011011, 0b1001111, 0b1100110,
-            0b1101101, 0b1111101, 0b0000111, 0b1111111, 0b1101111
-    };
-    private static final List<LightOverlayState.Marker> NO_MARKERS = Collections.emptyList();
+    // 图集中的字形已在 64x64 单元格内居中。
+    private static final double NUMBER_OFFSET_X = 0.0D;
+    private static final double NUMBER_OFFSET_Z = 0.25D;
+    private static final double BOXED_NUMBER_OFFSET_Z = 0.0D;
+    private static final double NUMBER_MARGIN = 0.1D;
+    private static final double NUMBER_SIZE = 1.0D;
+    private static final float NUMBER_TEXTURE_CELL_SIZE = 0.25F;
+    private static final List<LightOverlayState.MarkerColumn> NO_COLUMNS = List.of();
+    private static Map<Long, ColumnRenderData> columnGeometry = Map.of();
     private static volatile RenderData renderData;
+    private static final RenderType SEE_THROUGH_LINES = AutoTorchRenderTypes.seeThroughLines();
 
     private LightOverlayRenderer() {
     }
 
     public static void extract() {
-        List<LightOverlayState.Marker> markers = LightOverlayState.isEnabled()
-                ? LightOverlayState.markers() : NO_MARKERS;
+        List<LightOverlayState.MarkerColumn> columns = LightOverlayState.isEnabled()
+                ? LightOverlayState.markerColumns() : NO_COLUMNS;
         LightOverlayState.DisplayMode displayMode = LightOverlayState.displayMode();
         RenderData current = renderData;
-        // 扫描完成时状态会发布新的不可变列表，因此列表身份就是无需遍历的版本标记。
-        if (current != null && current.sourceMarkers() == markers && current.displayMode() == displayMode) {
+        // 状态发布新的不可变列列表，因此列表身份就是无需遍历的版本标记。
+        if (current != null && current.sourceColumns() == columns && current.displayMode() == displayMode) {
             return;
         }
-        renderData = buildRenderData(markers, displayMode);
+        renderData = buildRenderData(columns, displayMode);
     }
 
     public static void render(Vec3 camera, PoseStack poseStack, MultiBufferSource buffers) {
-        render(camera, poseStack, buffers, RenderType.lines());
-    }
-
-    public static void render(
-            Vec3 camera, PoseStack poseStack, MultiBufferSource buffers, RenderType renderType
-    ) {
-        renderGeometry(camera, poseStack, renderData, (stack, renderer) ->
-                renderer.render(stack.last(), buffers.getBuffer(renderType)));
-    }
-
-    public static void renderFiltered(
-            Vec3 camera, PoseStack poseStack, MultiBufferSource buffers, RenderType renderType,
-            Predicate<LightOverlayState.Marker> filter
-    ) {
-        RenderData current = renderData;
-        if (current == null) return;
-        RenderData filtered = buildRenderData(
-                current.sourceMarkers(), current.displayMode(), filter, 8);
-        renderGeometry(camera, poseStack, filtered, (stack, renderer) ->
-                renderer.render(stack.last(), buffers.getBuffer(renderType)));
+        RenderData data = renderData;
+        if (data == null) {
+            return;
+        }
+        if (data.displayMode() != LightOverlayState.DisplayMode.CROSSES) {
+            // 方框数字样式：数字平面置于方框内部，方框单独使用线段渲染以保持清晰边界。
+            ResourceLocation numberTexture = data.displayMode() == LightOverlayState.DisplayMode.BOXED_NUMBERS
+                    ? MEDIUM_NUMBER_TEXTURE : NUMBER_TEXTURE;
+            RenderType numberRenderType = ClientConfig.isLightOverlayRenderThrough()
+                    ? RenderType.textSeeThrough(numberTexture) : RenderType.text(numberTexture);
+            renderGeometry(camera, poseStack, buffers.getBuffer(numberRenderType),
+                    (pose, buffer) -> submitNumbers(pose, buffer, data, camera));
+            if (data.displayMode() == LightOverlayState.DisplayMode.BOXED_NUMBERS) {
+                renderGeometry(camera, poseStack, buffers.getBuffer(
+                        ClientConfig.isLightOverlayRenderThrough() ? SEE_THROUGH_LINES : RenderType.lines()),
+                        (pose, buffer) -> submitLines(pose, buffer, data, camera));
+            }
+        } else {
+            renderGeometry(camera, poseStack, buffers.getBuffer(
+                    ClientConfig.isLightOverlayRenderThrough() ? SEE_THROUGH_LINES : RenderType.lines()),
+                    (pose, buffer) -> submitLines(pose, buffer, data, camera));
+        }
     }
 
     private static void renderGeometry(
-            Vec3 camera, PoseStack poseStack, RenderData data, GeometrySink sink
+            Vec3 camera, PoseStack poseStack, VertexConsumer buffer, GeometryRenderer renderer
     ) {
-        if (data == null || data.lineCount() == 0 || Minecraft.getInstance().level == null) {
+        RenderData data = renderData;
+        if (data == null || data.renderableCount() == 0 || Minecraft.getInstance().level == null) {
             return;
         }
 
         poseStack.pushPose();
-        poseStack.translate(-camera.x(), -camera.y(), -camera.z());
-        sink.submit(poseStack, (pose, buffer) -> submitLines(pose, buffer, data));
+        // 顶点在提交时先转换为相机相对坐标，避免大世界坐标分别转 float 后再相减造成精度损失。
+        renderer.render(poseStack.last(), buffer);
         poseStack.popPose();
     }
 
     private static RenderData buildRenderData(
-            List<LightOverlayState.Marker> markers, LightOverlayState.DisplayMode displayMode
+            List<LightOverlayState.MarkerColumn> columns, LightOverlayState.DisplayMode displayMode
     ) {
-        return buildRenderData(markers, displayMode, marker -> true, markers.size());
+        Map<Long, ColumnRenderData> previousGeometry = columnGeometry;
+        Map<Long, ColumnRenderData> nextGeometry = new HashMap<>(columns.size());
+        List<ColumnRenderData> visibleGeometry = new ArrayList<>(columns.size());
+        int totalLines = 0;
+        int totalQuads = 0;
+        for (LightOverlayState.MarkerColumn column : columns) {
+            ColumnRenderData geometry = previousGeometry.get(column.key());
+            if (geometry == null || geometry.sourceMarkers() != column.markers()
+                    || geometry.displayMode() != displayMode) {
+                geometry = buildColumnRenderData(column.markers(), displayMode);
+            }
+            nextGeometry.put(column.key(), geometry);
+            visibleGeometry.add(geometry);
+            totalLines += geometry.lineCount();
+            totalQuads += geometry.numberQuads().size();
+        }
+        columnGeometry = nextGeometry;
+        return new RenderData(columns, displayMode, List.copyOf(visibleGeometry), totalLines, totalQuads);
     }
 
-    private static RenderData buildRenderData(
-            List<LightOverlayState.Marker> markers, LightOverlayState.DisplayMode displayMode,
-            Predicate<LightOverlayState.Marker> filter, int expectedMarkerCount
+    private static ColumnRenderData buildColumnRenderData(
+            List<LightOverlayState.Marker> markers, LightOverlayState.DisplayMode displayMode
     ) {
-        GeometryBuilder geometry = new GeometryBuilder(expectedMarkerCount);
+        GeometryBuilder geometry = new GeometryBuilder(markers.size());
         for (LightOverlayState.Marker marker : markers) {
-            if (!filter.test(marker)) {
+            if (displayMode == LightOverlayState.DisplayMode.NUMBERS) {
+                addNumber(geometry, marker, false);
                 continue;
             }
-            if (displayMode == LightOverlayState.DisplayMode.NUMBERS) {
-                addNumber(geometry, marker);
+            if (displayMode == LightOverlayState.DisplayMode.BOXED_NUMBERS) {
+                addNumber(geometry, marker, true);
+                // 绿色标记表示光照已高于刷怪阈值，只显示数字，不再绘制外围边框。
+                if (marker.isRisk()) {
+                    addNumberBox(geometry, marker);
+                }
                 continue;
             }
             if (!marker.isRisk()) {
@@ -116,130 +149,134 @@ public final class LightOverlayRenderer {
         return geometry.build(markers, displayMode);
     }
 
-    private static void addNumber(GeometryBuilder geometry, LightOverlayState.Marker marker) {
-        int value = marker.blockLight();
-        boolean hasTensDigit = value >= 10;
-        int digitCount = hasTensDigit ? 2 : 1;
-        double totalWidth = digitCount * DIGIT_WIDTH + (digitCount - 1) * DIGIT_GAP;
-        double startX = marker.pos().getX() + (1.0D - totalWidth) / 2.0D;
-        double startZ = marker.pos().getZ() + (1.0D - DIGIT_HEIGHT) / 2.0D;
-        double y = marker.pos().getY() + SURFACE_OFFSET;
-        int color = markerColor(marker);
+    private static void addNumber(GeometryBuilder geometry, LightOverlayState.Marker marker, boolean boxed) {
+        geometry.addNumber(marker.pos().getX() + NUMBER_OFFSET_X,
+                marker.pos().getY() + SURFACE_OFFSET,
+                marker.pos().getZ() + (boxed ? BOXED_NUMBER_OFFSET_Z : NUMBER_OFFSET_Z),
+                marker.blockLight(), markerColor(marker), boxed ? (float) NUMBER_SIZE : 1.0F);
+    }
 
-        if (hasTensDigit) {
-            addDigit(geometry, startX, y, startZ, DIGIT_SEGMENTS[value / 10], color);
-            startX += DIGIT_WIDTH + DIGIT_GAP;
-        }
-        addDigit(geometry, startX, y, startZ, DIGIT_SEGMENTS[value % 10], color);
+    private static void addNumberBox(GeometryBuilder geometry, LightOverlayState.Marker marker) {
+        double x0 = marker.pos().getX() + NUMBER_MARGIN;
+        double x1 = marker.pos().getX() + 1.0D - NUMBER_MARGIN;
+        double y = marker.pos().getY() + SURFACE_OFFSET;
+        double z0 = marker.pos().getZ() + NUMBER_MARGIN;
+        double z1 = marker.pos().getZ() + 1.0D - NUMBER_MARGIN;
+        int color = markerColor(marker);
+        geometry.add(x0, y, z0, x0, y, z1, color);
+        geometry.add(x0, y, z1, x1, y, z1, color);
+        geometry.add(x1, y, z1, x1, y, z0, color);
+        geometry.add(x1, y, z0, x0, y, z0, color);
     }
 
     private static int markerColor(LightOverlayState.Marker marker) {
-        if (marker.riskType() == LightOverlayState.RiskType.DROWNED) {
-            return DROWNED_RISK_COLOR;
-        }
-        return marker.blockLight() > 0 ? SAFE_COLOR
-                : marker.nightOnly() ? NIGHT_RISK_COLOR : ALWAYS_RISK_COLOR;
+        return switch (marker.riskType()) {
+            case SWAMP_SLIME -> SWAMP_SLIME_RISK_COLOR;
+            case DROWNED -> DROWNED_RISK_COLOR;
+            case NORMAL -> marker.blockLight() > 0 ? SAFE_COLOR
+                    : marker.nightOnly() ? NIGHT_RISK_COLOR : ALWAYS_RISK_COLOR;
+        };
     }
 
-    private static void addDigit(
-            GeometryBuilder geometry, double x, double y, double z, int segments, int color
-    ) {
-        double middleZ = z + DIGIT_HEIGHT / 2.0D;
-        double maxX = x + DIGIT_WIDTH;
-        double maxZ = z + DIGIT_HEIGHT;
-        addSegment(geometry, segments, 0, x, y, z, maxX, z, color);
-        addSegment(geometry, segments, 1, maxX, y, z, maxX, middleZ, color);
-        addSegment(geometry, segments, 2, maxX, y, middleZ, maxX, maxZ, color);
-        addSegment(geometry, segments, 3, x, y, maxZ, maxX, maxZ, color);
-        addSegment(geometry, segments, 4, x, y, middleZ, x, maxZ, color);
-        addSegment(geometry, segments, 5, x, y, z, x, middleZ, color);
-        addSegment(geometry, segments, 6, x, y, middleZ, maxX, middleZ, color);
-    }
-
-    private static void addSegment(
-            GeometryBuilder geometry, int segments, int bit,
-            double x1, double y, double z1, double x2, double z2, int color
-    ) {
-        if ((segments & 1 << bit) != 0) {
-            geometry.add(x1, y, z1, x2, y, z2, color);
+    private static void submitLines(PoseStack.Pose pose, VertexConsumer buffer, RenderData data, Vec3 camera) {
+        for (ColumnRenderData column : data.columns()) {
+            double[] coordinates = column.coordinates();
+            int[] colors = column.colors();
+            for (int line = 0, offset = 0; line < column.lineCount(); line++, offset += 6) {
+                double x1 = coordinates[offset] - camera.x();
+                double y1 = coordinates[offset + 1] - camera.y();
+                double z1 = coordinates[offset + 2] - camera.z();
+                double x2 = coordinates[offset + 3] - camera.x();
+                double y2 = coordinates[offset + 4] - camera.y();
+                double z2 = coordinates[offset + 5] - camera.z();
+                line(pose, buffer, x1, y1, z1, x2, y2, z2, colors[line]);
+            }
         }
     }
 
-    private static void submitLines(PoseStack.Pose pose, VertexConsumer buffer, RenderData data) {
-        float[] coordinates = data.coordinates();
-        int[] colors = data.colors();
-        float lineWidth = data.displayMode() == LightOverlayState.DisplayMode.NUMBERS
-                ? DIGIT_LINE_WIDTH : CROSS_LINE_WIDTH;
-        for (int line = 0, offset = 0; line < data.lineCount(); line++, offset += 6) {
-            line(pose, buffer,
-                    coordinates[offset], coordinates[offset + 1], coordinates[offset + 2],
-                    coordinates[offset + 3], coordinates[offset + 4], coordinates[offset + 5],
-                    colors[line], lineWidth);
+    private static void submitNumbers(
+            PoseStack.Pose pose, VertexConsumer buffer, RenderData data, Vec3 camera
+    ) {
+        for (ColumnRenderData column : data.columns()) {
+            for (NumberQuad quad : column.numberQuads()) {
+                float x = (float) (quad.x() - camera.x());
+                float y = (float) (quad.y() - camera.y());
+                float z = (float) (quad.z() - camera.z());
+                float size = quad.size();
+                float u = (quad.value() & 3) * NUMBER_TEXTURE_CELL_SIZE;
+                float v = (quad.value() >> 2) * NUMBER_TEXTURE_CELL_SIZE;
+                buffer.vertex(pose.pose(), x, y, z).uv(u, v)
+                        .uv2(FULL_BRIGHT_LIGHT, FULL_BRIGHT_LIGHT).color((quad.color() >> 16) & 0xFF, (quad.color() >> 8) & 0xFF, quad.color() & 0xFF, quad.color() >>> 24).endVertex();
+                buffer.vertex(pose.pose(), x, y, z + size).uv(u, v + NUMBER_TEXTURE_CELL_SIZE)
+                        .uv2(FULL_BRIGHT_LIGHT, FULL_BRIGHT_LIGHT).color((quad.color() >> 16) & 0xFF, (quad.color() >> 8) & 0xFF, quad.color() & 0xFF, quad.color() >>> 24).endVertex();
+                buffer.vertex(pose.pose(), x + size, y, z + size)
+                        .uv(u + NUMBER_TEXTURE_CELL_SIZE, v + NUMBER_TEXTURE_CELL_SIZE)
+                        .uv2(FULL_BRIGHT_LIGHT, FULL_BRIGHT_LIGHT).color((quad.color() >> 16) & 0xFF, (quad.color() >> 8) & 0xFF, quad.color() & 0xFF, quad.color() >>> 24).endVertex();
+                buffer.vertex(pose.pose(), x + size, y, z).uv(u + NUMBER_TEXTURE_CELL_SIZE, v)
+                        .uv2(FULL_BRIGHT_LIGHT, FULL_BRIGHT_LIGHT).color((quad.color() >> 16) & 0xFF, (quad.color() >> 8) & 0xFF, quad.color() & 0xFF, quad.color() >>> 24).endVertex();
+            }
         }
     }
 
     private static void line(
             PoseStack.Pose pose, VertexConsumer buffer,
-            float x1, float y1, float z1, float x2, float y2, float z2, int color, float lineWidth
+            double x1, double y1, double z1, double x2, double y2, double z2,
+            int color
     ) {
-        applyColor(buffer.vertex(pose.pose(), x1, y1, z1), color)
-                .endVertex();
-        applyColor(buffer.vertex(pose.pose(), x2, y2, z2), color)
-                .endVertex();
+        float nx = (float) (x2 - x1);
+        float ny = (float) (y2 - y1);
+        float nz = (float) (z2 - z1);
+        buffer.vertex(pose.pose(), (float) x1, (float) y1, (float) z1)
+                .color((color >> 16) & 0xFF, (color >> 8) & 0xFF, color & 0xFF, color >>> 24).normal(pose.normal(), nx, ny, nz).endVertex();
+        buffer.vertex(pose.pose(), (float) x2, (float) y2, (float) z2)
+                .color((color >> 16) & 0xFF, (color >> 8) & 0xFF, color & 0xFF, color >>> 24).normal(pose.normal(), nx, ny, nz).endVertex();
     }
 
-    private static VertexConsumer applyColor(VertexConsumer vertex, int color) {
-        return vertex.color((color >> 16) & 0xFF, (color >> 8) & 0xFF,
-                color & 0xFF, (color >>> 24) & 0xFF);
-    }
-
-    private static final class RenderData {
-        private final List<LightOverlayState.Marker> sourceMarkers;
-        private final LightOverlayState.DisplayMode displayMode;
-        private final float[] coordinates;
-        private final int[] colors;
-        private final int lineCount;
-
-        private RenderData(
-                List<LightOverlayState.Marker> sourceMarkers, LightOverlayState.DisplayMode displayMode,
-                float[] coordinates, int[] colors, int lineCount
-        ) {
-            this.sourceMarkers = sourceMarkers;
-            this.displayMode = displayMode;
-            this.coordinates = coordinates;
-            this.colors = colors;
-            this.lineCount = lineCount;
+    private record RenderData(
+            List<LightOverlayState.MarkerColumn> sourceColumns, LightOverlayState.DisplayMode displayMode,
+            List<ColumnRenderData> columns, int lineCount, int quadCount
+    ) {
+        private int renderableCount() {
+            return lineCount + quadCount;
         }
+    }
 
-        private List<LightOverlayState.Marker> sourceMarkers() { return sourceMarkers; }
-        private LightOverlayState.DisplayMode displayMode() { return displayMode; }
-        private float[] coordinates() { return coordinates; }
-        private int[] colors() { return colors; }
-        private int lineCount() { return lineCount; }
+    private record ColumnRenderData(
+            List<LightOverlayState.Marker> sourceMarkers, LightOverlayState.DisplayMode displayMode,
+            double[] coordinates, int[] colors, int lineCount, List<NumberQuad> numberQuads
+    ) {
+    }
+
+    private record NumberQuad(double x, double y, double z, int value, int color, float size) {
     }
 
     private static final class GeometryBuilder {
-        private float[] coordinates;
+        private double[] coordinates;
         private int[] colors;
         private int lineCount;
+        private final List<NumberQuad> numberQuads = new ArrayList<>();
 
         private GeometryBuilder(int markerCount) {
             int initialLines = Math.max(16, markerCount * 2);
-            coordinates = new float[initialLines * 6];
+            coordinates = new double[initialLines * 6];
             colors = new int[initialLines];
         }
 
         private void add(double x1, double y1, double z1, double x2, double y2, double z2, int color) {
             ensureCapacity(lineCount + 1);
             int offset = lineCount * 6;
-            coordinates[offset] = (float) x1;
-            coordinates[offset + 1] = (float) y1;
-            coordinates[offset + 2] = (float) z1;
-            coordinates[offset + 3] = (float) x2;
-            coordinates[offset + 4] = (float) y2;
-            coordinates[offset + 5] = (float) z2;
+            coordinates[offset] = x1;
+            coordinates[offset + 1] = y1;
+            coordinates[offset + 2] = z1;
+            coordinates[offset + 3] = x2;
+            coordinates[offset + 4] = y2;
+            coordinates[offset + 5] = z2;
             colors[lineCount] = color;
             lineCount++;
+        }
+
+        private void addNumber(double x, double y, double z, int value, int color, float size) {
+            numberQuads.add(new NumberQuad(x, y, z, value, color, size));
         }
 
         private void ensureCapacity(int requiredLines) {
@@ -251,22 +288,18 @@ public final class LightOverlayRenderer {
             colors = Arrays.copyOf(colors, newLength);
         }
 
-        private RenderData build(
+        private ColumnRenderData build(
                 List<LightOverlayState.Marker> markers, LightOverlayState.DisplayMode displayMode
         ) {
-            return new RenderData(
+            return new ColumnRenderData(
                     markers,
                     displayMode,
                     Arrays.copyOf(coordinates, lineCount * 6),
                     Arrays.copyOf(colors, lineCount),
-                    lineCount
+                    lineCount,
+                    List.copyOf(numberQuads)
             );
         }
-    }
-
-    @FunctionalInterface
-    private interface GeometrySink {
-        void submit(PoseStack poseStack, GeometryRenderer renderer);
     }
 
     @FunctionalInterface
@@ -274,3 +307,4 @@ public final class LightOverlayRenderer {
         void render(PoseStack.Pose pose, VertexConsumer buffer);
     }
 }
+
